<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asus_xtion_description</name>
  <version>1.0.0</version>
  <description>Asus Xtion model description updated for Gazebo Harmonic</description>
  <!-- Gazebo harmonic port by -->
  <author email="azmyin12@gmail.com">Azmyin Md. Kamal</author>
  <maintainer email="azmyin12@gmail.com">Azmyin Md. Kamal</maintainer>
  
  <license>BSD-3</license>

  <!-- Original author -->
  <author email="mgons@unileon.es">Miguel Ángel González Santamarta</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz</depend>
  <depend>gz_ros2_control</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>