<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asus_xtion_visualization</name>
  <version>1.0.0</version>
  <description>RViz visualization for Asus Xtion camera.</description>
  <author email="mgons@unileon.es">Miguel Ángel González Santamarta</author>
  <maintainer email="azmyin12@gmail.com">Azmyin Md. Kamal</maintainer>
  
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>